Updates for newer Android and Gradle Build Versions.
Also add CH340 device to device_filters.xml.

--- a/kegtab/src/main/res/xml/device_filter.xml
+++ b/kegtab/src/main/res/xml/device_filter.xml
@@ -35,5 +35,8 @@
         vendor-id="1003"
         product-id="1078"/>
 
+    <!-- 0x1a86 / 0x7523: Qinheng CH340 -->
+    <usb-device vendor-id="6790" product-id="29987" />
+
 </resources>
 
